// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`guard with meld 1`] = `
Object {
  "--w-border-opacity": "1",
  "borderColor": "rgba(254, 243, 199, var(--w-border-opacity))",
}
`;

exports[`guard with meld 2`] = `
Object {
  "borderWidth": "2px",
}
`;

exports[`guard with meld 3`] = `
Object {
  "--w-border-opacity": "1",
  "borderColor": "rgba(96, 165, 250, var(--w-border-opacity))",
}
`;

exports[`use multi plugin with meld and use 1`] = `
Object {
  "borderWidth": "0px",
}
`;

exports[`use multi plugin with meld and use 2`] = `
Object {
  "--w-border-opacity": "1",
  "borderColor": "rgba(16, 185, 129, var(--w-border-opacity))",
}
`;

exports[`use multi plugin with meld and use 3`] = `
Object {
  "borderStyle": "dashed",
}
`;

exports[`use single plugin 1`] = `
Object {
  "backgroundColor": "rgb(22, 22, 22)",
}
`;

exports[`use single plugin 2`] = `
Object {
  "backgroundColor": "red",
}
`;

exports[`use single plugin 3`] = `
Object {
  "backgroundColor": "aliceBlue",
}
`;

exports[`use single plugin 4`] = `
Object {
  "backgroundColor": "#ffffff",
}
`;

exports[`useGeneric With Trigger 1`] = `
Object {
  "backgroundColor": "rgb(22, 22, 22)",
}
`;

exports[`useGeneric With Trigger2 1`] = `
Object {
  "backgroundColor": "rgb(22, 22, 22)",
}
`;
